--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 h1 {
  color: blueviolet;   
 }
+
+#content {
+   width: 600px;
+   border: blueviolet;
+   margin: auto
+   paddin: 50px;
+   backgrund-clor: #eee;
+
+
+     
+
+    
+} 
+{text-aling: 
+    
+}
+.portre{
+width: 150px;
+float: left;
+margin: right 20px;
+
+}
